# SoroGuard

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
contracts/guardian/: Cargo.toml
contracts/guardian/src/: adapter.rs  error.rs  event.rs  lib.rs  oracle.rs  rule.rs  storage.rs  test.rs  trigger.rs
contracts/policy/: Cargo.toml
contracts/policy/src/: error.rs  lib.rs  test.rs
keeper/: Cargo.toml  soroguard.example.toml
keeper/src/: config.rs  main.rs  signer.rs  submit.rs  tx.rs  watch.rs
site/: package-lock.json  package.json
site/app/: diagram.tsx  globals.css  layout.tsx  logo.tsx  page.tsx  scroll-reveal.tsx
