[workspace]
resolver = "2"
members = ["contracts/guardian", "contracts/policy", "keeper"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/soloking1412/soroguard"

[workspace.dependencies]
soroban-sdk = "27.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
